Alterações no site

--- a/css/styles.css
+++ b/css/styles.css
@@ -10133,3 +10133,7 @@ section.resume-section .resume-section-content {
     padding-bottom: 5rem;
   }
 }
+
+img.logoExperience{
+  min-width: 100px;
+}
